--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-02-01T14:21:29.602546Z",
-     "start_time": "2025-02-01T14:21:29.586571Z"
+     "end_time": "2025-02-01T14:38:00.533848Z",
+     "start_time": "2025-02-01T14:38:00.513679Z"
     }
    },
    "source": [
@@ -18,7 +18,7 @@
     "from matplotlib import pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 170
+   "execution_count": 187
   },
   {
    "metadata": {},
@@ -29,13 +29,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-01T14:21:29.933262Z",
-     "start_time": "2025-02-01T14:21:29.704955Z"
+     "end_time": "2025-02-01T14:38:01.248997Z",
+     "start_time": "2025-02-01T14:38:00.628827Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "img = cv2.imread(\"bm.jpg\")\n",
+    "img = cv2.imread(\"data/bm.jpg\")\n",
     "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "plt.imshow(cv2.cvtColor(gray, cv2.COLOR_BGR2RGB))"
    ],
@@ -44,10 +44,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x21593ba4ba8>"
+       "<matplotlib.image.AxesImage at 0x215948c5eb8>"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -62,7 +62,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 171
+   "execution_count": 188
   },
   {
    "metadata": {},
@@ -73,8 +73,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-01T14:21:30.156813Z",
-     "start_time": "2025-02-01T14:21:29.933262Z"
+     "end_time": "2025-02-01T14:38:01.729857Z",
+     "start_time": "2025-02-01T14:38:01.258564Z"
     }
    },
    "cell_type": "code",
@@ -87,10 +87,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x21593eac940>"
+       "<matplotlib.image.AxesImage at 0x21594765cc0>"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -105,7 +105,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 172
+   "execution_count": 189
   },
   {
    "metadata": {},
@@ -116,8 +116,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-01T14:21:30.379888Z",
-     "start_time": "2025-02-01T14:21:30.159118Z"
+     "end_time": "2025-02-01T14:38:02.234054Z",
+     "start_time": "2025-02-01T14:38:01.733882Z"
     }
    },
    "cell_type": "code",
@@ -130,10 +130,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2158ff989e8>"
+       "<matplotlib.image.AxesImage at 0x215947d6080>"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -148,7 +148,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 173
+   "execution_count": 190
   },
   {
    "metadata": {},
@@ -159,8 +159,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-01T14:21:30.539898Z",
-     "start_time": "2025-02-01T14:21:30.379888Z"
+     "end_time": "2025-02-01T14:38:02.688960Z",
+     "start_time": "2025-02-01T14:38:02.243646Z"
     }
    },
    "cell_type": "code",
@@ -9404,18 +9404,18 @@
        "         [ -1, 294,  -1,  -1]]], dtype=int32))"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 174
+   "execution_count": 191
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-01T14:21:30.634150Z",
-     "start_time": "2025-02-01T14:21:30.539898Z"
+     "end_time": "2025-02-01T14:38:02.741473Z",
+     "start_time": "2025-02-01T14:38:02.704042Z"
     }
    },
    "cell_type": "code",
@@ -11179,18 +11179,18 @@
        "        [[ 15, 132]]], dtype=int32)]"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 175
+   "execution_count": 192
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-01T14:21:30.683448Z",
-     "start_time": "2025-02-01T14:21:30.650209Z"
+     "end_time": "2025-02-01T14:38:02.773860Z",
+     "start_time": "2025-02-01T14:38:02.743982Z"
     }
    },
    "cell_type": "code",
@@ -11205,13 +11205,13 @@
    ],
    "id": "7cea95e69ae8c180",
    "outputs": [],
-   "execution_count": 176
+   "execution_count": 193
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-01T14:21:30.762385Z",
-     "start_time": "2025-02-01T14:21:30.698026Z"
+     "end_time": "2025-02-01T14:38:02.853956Z",
+     "start_time": "2025-02-01T14:38:02.776974Z"
     }
    },
    "cell_type": "code",
@@ -11230,12 +11230,12 @@
        "       [[157, 108]]], dtype=int32)"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 177
+   "execution_count": 194
   },
   {
    "metadata": {},
@@ -11246,8 +11246,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-01T14:21:30.777997Z",
-     "start_time": "2025-02-01T14:21:30.763398Z"
+     "end_time": "2025-02-01T14:38:02.901729Z",
+     "start_time": "2025-02-01T14:38:02.853956Z"
     }
    },
    "cell_type": "code",
@@ -11258,13 +11258,13 @@
    ],
    "id": "f2c076059f57456a",
    "outputs": [],
-   "execution_count": 178
+   "execution_count": 195
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-01T14:21:31.112169Z",
-     "start_time": "2025-02-01T14:21:30.777997Z"
+     "end_time": "2025-02-01T14:38:03.463692Z",
+     "start_time": "2025-02-01T14:38:02.903738Z"
     }
    },
    "cell_type": "code",
@@ -11274,10 +11274,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x21590017518>"
+       "<matplotlib.image.AxesImage at 0x215948d0588>"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -11292,7 +11292,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 179
+   "execution_count": 196
   },
   {
    "metadata": {},
@@ -11303,8 +11303,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-01T14:21:31.128248Z",
-     "start_time": "2025-02-01T14:21:31.113177Z"
+     "end_time": "2025-02-01T14:38:03.479492Z",
+     "start_time": "2025-02-01T14:38:03.463692Z"
     }
    },
    "cell_type": "code",
@@ -11329,18 +11329,18 @@
        "       [ 52, 121, 146, ..., 209, 213,  63]], dtype=uint8)"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 180
+   "execution_count": 197
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-01T14:21:31.288073Z",
-     "start_time": "2025-02-01T14:21:31.128248Z"
+     "end_time": "2025-02-01T14:38:03.599497Z",
+     "start_time": "2025-02-01T14:38:03.479492Z"
     }
    },
    "cell_type": "code",
@@ -11350,10 +11350,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2159008c2e8>"
+       "<matplotlib.image.AxesImage at 0x21594a8b3c8>"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -11368,7 +11368,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 181
+   "execution_count": 198
   },
   {
    "metadata": {},
@@ -11379,8 +11379,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-01T14:21:38.763353Z",
-     "start_time": "2025-02-01T14:21:31.288544Z"
+     "end_time": "2025-02-01T14:38:09.423759Z",
+     "start_time": "2025-02-01T14:38:03.601153Z"
     }
    },
    "cell_type": "code",
@@ -11404,12 +11404,12 @@
        "[([[0, 0], [92, 0], [92, 21], [0, 21]], 'Ka 64 N 0G9Q', 0.45888040909889405)]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 182
+   "execution_count": 199
   },
   {
    "metadata": {},
@@ -11420,8 +11420,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-01T14:21:38.779393Z",
-     "start_time": "2025-02-01T14:21:38.764863Z"
+     "end_time": "2025-02-01T14:38:09.455699Z",
+     "start_time": "2025-02-01T14:38:09.423759Z"
     }
    },
    "cell_type": "code",
@@ -11438,18 +11438,18 @@
        "'Ka 64 N 0G9Q'"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 183
+   "execution_count": 200
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-01T14:21:38.794432Z",
-     "start_time": "2025-02-01T14:21:38.781394Z"
+     "end_time": "2025-02-01T14:38:09.504029Z",
+     "start_time": "2025-02-01T14:38:09.455699Z"
     }
    },
    "cell_type": "code",
@@ -11460,13 +11460,13 @@
    ],
    "id": "da1dc8850bfcb2f1",
    "outputs": [],
-   "execution_count": 184
+   "execution_count": 201
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-01T14:21:39.074406Z",
-     "start_time": "2025-02-01T14:21:38.796438Z"
+     "end_time": "2025-02-01T14:38:09.733612Z",
+     "start_time": "2025-02-01T14:38:09.504029Z"
     }
    },
    "cell_type": "code",
@@ -11476,10 +11476,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2159485a390>"
+       "<matplotlib.image.AxesImage at 0x21593bddd68>"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -11494,7 +11494,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 185
+   "execution_count": 202
   }
  ],
  "metadata": {
